attempt to get form to work

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Contact Me</h2>
-							<form method="post" action="form.php" id = "contact-form">
+							<form method="post" action="mailto:s2001028@ed.ac.uk">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
