--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 					<section class="banner style1 orient-left content-align-right image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Miranda Heath</h1>
-							<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath">University of Edinburgh</a>.
+							<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath" target= "_blank">University of Edinburgh</a>.
 							<p>My work seeks to disentangle the influence of individualist and neoliberal ideology from altruism, pro-social behaviour and moral circle research. I hope this will help us to better understand <em>collective</em> moral regard and behaviour and, in turn, better equip us to tackle existential collective action problems such as the climate emergency and pandemics.</p>
 							<p>In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.</p>
-							<p><a href = "https://orcid.org/0000-0003-0115-0978"><i class="fa-brands fa-orcid"></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MiGrHe"><i class="fa-brands fa-github"></i></a></p>
+							<p><a href = "https://orcid.org/0000-0003-0115-0978" target= "_blank"><i class="fa-brands fa-orcid" ></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3" target= "_blank"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MirandaHeath" target= "_blank"><i class="fa-brands fa-github"></i></a></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Tell me more!</a></li>
 							</ul>
@@ -49,7 +49,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Lab</h2>
-							<p>I am part of the <a href="https://www.mattiwilks.com/lab">Altruistic Minds Lab</a>, run by my supervisor, Dr. Matti Wilks. We meet bi-weekly to discuss topics in moral psychology, from the moral circle to the moral treatment of animals to morality and ethics in AI. We welcome external speakers where possible!</p>
+							<p>I am part of the <a href="https://www.mattiwilks.com/lab" target= "_blank">Altruistic Minds Lab</a>, run by my supervisor, Dr. Matti Wilks. We meet bi-weekly to discuss topics in moral psychology, from the moral circle to the moral treatment of animals to morality and ethics in AI. We welcome external speakers where possible!</p>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
@@ -74,9 +74,9 @@
 						<ul class="alt">
 							<li>Heath, M., & Auburn, T. <em>‘I’m not exceptional’: How unspecified kidney donors construct their identity and altruism.</em>. [Unpublished manuscript].</li>
 							<li>Leyland, R., Heath, M., Collett, T., Drake, E., & Neve, H. <em>“How far I’ve come”: The value of reviewing past reflections.</em> [Manuscript submitted for publication].</li>
-							<li>Neve, H., Hanks, S., Heath, M. & Smith, W. (2020). ‘Today’s shook me up a lot inside…it’s definitely changed me’: Emotional responses and transformative learning through working with disadvantaged communities. <em>Education for Primary Care</em>, <em>31</em>(6), 358-364.</li>
-							<li>Leyland, R., Heath, M., Neve, H., & Maynard, V. (2020). Structured reflection on shared decision making. <em>The Clinical Teacher</em>, <em>17</em>, 1-7.</li>
-							<li>Lloyd, H., & Heath, M. (2018). A spotlight on safeguarding in trainee selection: The Plymouth programme’s experience of Safer Recruitment. <em>Clinical Psychology Forum</em>, <em>306</em>, 25-29.</li>
+							<li>Neve, H., Hanks, S., Heath, M. & Smith, W. (2020). ‘Today’s shook me up a lot inside…it’s definitely changed me’: Emotional responses and transformative learning through working with disadvantaged communities. <em>Education for Primary Care</em>, <em>31</em>(6), 358-364. <a href = "https://doi.org/10.1080/14739879.2020.1819170" target= "_blank">https://doi.org/10.1080/14739879.2020.1819170</a></li>
+							<li>Leyland, R., Heath, M., Neve, H., & Maynard, V. (2020). Structured reflection on shared decision making. <em>The Clinical Teacher</em>, <em>17</em>, 1-7.<a href = "https://doi.org/10.1111/tct.13233" target= "_blank">https://doi.org/10.1111/tct.13233</a></li>
+							<li>Lloyd, H., & Heath, M. (2018). A spotlight on safeguarding in trainee selection: The Plymouth programme’s experience of Safer Recruitment. <em>Clinical Psychology Forum</em>, <em>306</em>, 25-29. <a href = "https://pearl.plymouth.ac.uk/handle/10026.1/12975" target= "_blank">https://pearl.plymouth.ac.uk/handle/10026.1/12975</a></li>
 						</ul>
 					</div>
 				</section>
@@ -84,31 +84,16 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Contact Me</h2>
-							<form method="post" action="mailto:s2001028@ed.ac.uk">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							
+							<ul class="actions stacked">
+								<li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=sAafLmkWiUWHiRCgaTTcYY3TRgANQcZOiW8-d-v0uCBUNFFJMDQ0VkFCSDA1OTQwVUxGMDRES1Q1TC4u" target= "_blank" class="button big wide smooth-scroll-middle">Contact Me!</a></li>
+							</ul>
+						</div>
+					</section>
+
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
