fixed dissertation citation

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 					<div class="content">
 						<h2>Works</h2>
 						<ul class="alt">
-							<li>Heath, M., & Auburn, T. <em>‘I’m not exceptional’: How unspecified kidney donors construct their identity and altruism.</em>. [Unpublished manuscript].</li>
-							<li>Leyland, R., Heath, M., Collett, T., Drake, E., & Neve, H. <em>“How far I’ve come”: The value of reviewing past reflections.</em> [Manuscript submitted for publication].</li>
+							<li>Heath, M., & Auburn, T. <em>‘I’m not exceptional’: How unspecified kidney donors construct their identity and altruism</em>. [Undergraduate dissertation].</li>
+							<li>Leyland, R., Heath, M., Collett, T., Drake, E., & Neve, H. <em>“How far I’ve come”: The value of reviewing past reflections</em>. [Manuscript submitted for publication].</li>
 							<li>Neve, H., Hanks, S., Heath, M. & Smith, W. (2020). ‘Today’s shook me up a lot inside…it’s definitely changed me’: Emotional responses and transformative learning through working with disadvantaged communities. <em>Education for Primary Care</em>, <em>31</em>(6), 358-364. <a href = "https://doi.org/10.1080/14739879.2020.1819170" target= "_blank">https://doi.org/10.1080/14739879.2020.1819170</a></li>
 							<li>Leyland, R., Heath, M., Neve, H., & Maynard, V. (2020). Structured reflection on shared decision making. <em>The Clinical Teacher</em>, <em>17</em>, 1-7.<a href = "https://doi.org/10.1111/tct.13233" target= "_blank">https://doi.org/10.1111/tct.13233</a></li>
 							<li>Lloyd, H., & Heath, M. (2018). A spotlight on safeguarding in trainee selection: The Plymouth programme’s experience of Safer Recruitment. <em>Clinical Psychology Forum</em>, <em>306</em>, 25-29. <a href = "https://pearl.plymouth.ac.uk/handle/10026.1/12975" target= "_blank">https://pearl.plymouth.ac.uk/handle/10026.1/12975</a></li>
