add about page stub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath" target= "_blank">University of Edinburgh</a>.
 							<p>My work seeks to disentangle the influence of individualism and neoliberal ideology from altruism and moral expansiveness research. I hope this will help us to better understand <em>collective</em> moral regard and behaviour and, in turn, better equip us to tackle existential collective action problems such as the climate emergency and pandemics.</p>
 							<p>In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.</p>
+							<p>Also, check out my <a href="about.html">about page</a>.</p>
 							<p><a href = "https://orcid.org/0000-0003-0115-0978" target= "_blank"><i class="fa-brands fa-orcid" ></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3" target= "_blank"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MirandaHeath" target= "_blank"><i class="fa-brands fa-github"></i></a></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Tell me more!</a></li>
