--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 							<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath" target= "_blank">University of Edinburgh</a>.
 							<p>My work seeks to disentangle the influence of individualism and neoliberal ideology from altruism and moral expansiveness research. I hope this will help us to better understand <em>collective</em> moral regard and behaviour and, in turn, better equip us to tackle existential collective action problems such as the climate emergency and pandemics.</p>
 							<p>In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.</p>
+							<p>Check out my <a href="about.html">about page</a> for a bit more about me, and my <a href="blog.html">blog page</a> for my thoughts and ideas.</p>
 							<p><a href = "https://orcid.org/0000-0003-0115-0978" target= "_blank"><i class="fa-brands fa-orcid" ></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3" target= "_blank"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MirandaHeath" target= "_blank"><i class="fa-brands fa-github"></i></a></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Tell me more!</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/banner.jpg" alt="an expressive painting of a melting ice landscape" />
 						</div>
 					</section>
 
@@ -41,7 +42,7 @@
 							<p>I am interested in post-positivist and critical realist methodologies that identify and subvert existing power structures and consider the role of history and social context in shaping the social world and our understanding of it, including PDT, FDA and the various approaches to CDA. My education spans psychology and philosophy, and I like to bring epistemological and ontological questions from the philosophy of science and mind to bear on my research.</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/spotlight01.jpg" alt="a photograph taken at a slanted angle of a stone circle with the grass in front cut into concentric rings" />
 						</div>
 					</section>
 
@@ -52,7 +53,7 @@
 							<p>I am part of the <a href="https://www.mattiwilks.com/lab" target= "_blank">Altruistic Minds Lab</a>, run by my supervisor, Dr. Matti Wilks. We meet bi-weekly to discuss topics in moral psychology, from the moral circle to the moral treatment of animals to morality and ethics in AI. We welcome external speakers where possible!</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/spotlight02.jpg" alt="a photograph of a black and white cat sat in the middle or a round rug with different bands of colour in concentric rings" />
 						</div>
 					</section>
 
@@ -63,11 +64,11 @@
 							<p>I am experienced in qualitative data collection (interviews, focus groups, free text survey questions, written and pictorial reflections) and analysis (particularly critical discourse studies, post-structuralist discourse theory, discursive psyschology and thematic analysis) within social psychology, health and education research. I have explored reflection and threshold concepts in medical and dental education, and how prospective donors and renal staff discuss non-directed kidney donation in the UK. I am trained to a post-graduate level in qualitative methods, univariate and multivariate statistics in R, Bayesian statistics in R and research skills and design.</p>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/spotlight03.jpg" alt="a photograph of a balanced stack of rocks next to a lake with concentric rings of ripples on the surface" />
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- Six -->
 				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Works</h2>
@@ -81,7 +82,7 @@
 					</div>
 				</section>
 
-				<!-- Six -->
+				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<ul class="actions stacked">
