--- a/index.html
+++ b/index.html
@@ -1,114 +1,80 @@
-<!DOCTYPE HTML>
-<!--
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!doctype html>
 <html>
 	<head>
 		<title>Miranda Heath</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
-
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-right image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<h1>Miranda Heath</h1>
-							<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath" target= "_blank">University of Edinburgh</a>.
-							<p>My work seeks to disentangle the influence of individualism and neoliberal ideology from altruism and moral expansiveness research. I hope this will help us to better understand <em>collective</em> moral regard and behaviour and, in turn, better equip us to tackle existential collective action problems such as the climate emergency and pandemics.</p>
-							<p>In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.</p>
-							<p>Check out my <a href="about.html">about page</a> for a bit more about me, and my <a href="blog.html">blog page</a> for my thoughts and ideas.</p>
-							<p><a href = "https://orcid.org/0000-0003-0115-0978" target= "_blank"><i class="fa-brands fa-orcid" ></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3" target= "_blank"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MirandaHeath" target= "_blank"><i class="fa-brands fa-github"></i></a></p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Tell me more!</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="an expressive painting of a melting ice landscape" />
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>Methodological Approach</h2>
-							<p>I am interested in post-positivist and critical realist methodologies that identify and subvert existing power structures and consider the role of history and social context in shaping the social world and our understanding of it, including PDT, FDA and the various approaches to CDA. My education spans psychology and philosophy, and I like to bring epistemological and ontological questions from the philosophy of science and mind to bear on my research.</p>
-						</div>
-						<div class="image">
-							<img src="images/spotlight01.jpg" alt="a photograph taken at a slanted angle of a stone circle with the grass in front cut into concentric rings" />
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Lab</h2>
-							<p>I am part of the <a href="https://www.mattiwilks.com/lab" target= "_blank">Altruistic Minds Lab</a>, run by my supervisor, Dr. Matti Wilks. We meet bi-weekly to discuss topics in moral psychology, from the moral circle to the moral treatment of animals to morality and ethics in AI. We welcome external speakers where possible!</p>
-						</div>
-						<div class="image">
-							<img src="images/spotlight02.jpg" alt="a photograph of a black and white cat sat in the middle or a round rug with different bands of colour in concentric rings" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Knowldge, Skills and Experience</h2>
-							<p>I am experienced in qualitative data collection (interviews, focus groups, free text survey questions, written and pictorial reflections) and analysis (particularly critical discourse studies, post-structuralist discourse theory, discursive psyschology and thematic analysis) within social psychology, health and education research. I have explored reflection and threshold concepts in medical and dental education, and how prospective donors and renal staff discuss non-directed kidney donation in the UK. I am trained to a post-graduate level in qualitative methods, univariate and multivariate statistics in R, Bayesian statistics in R and research skills and design.</p>
-						</div>
-						<div class="image">
-							<img src="images/spotlight03.jpg" alt="a photograph of a balanced stack of rocks next to a lake with concentric rings of ripples on the surface" />
-						</div>
-					</section>
-
-				<!-- Six -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-					<div class="content">
-						<h2>Works</h2>
-						<ul class="alt">
-							<li>Heath, M., & Auburn, T. <em>‘I’m not exceptional’: How unspecified kidney donors construct their identity and altruism</em>. [Undergraduate dissertation].</li>
-							<li>Leyland, R., Heath, M., Collett, T., Drake, E., & Neve, H. 'How far I’ve come': The value of reviewing past reflections. <em>Reflective Practice</em>, 1–13. <a href = https://doi.org/10.1080/14623943.2024.2406969 target= "_blank">https://doi.org/10.1080/14623943.2024.2406969</a></li>
-							<li>Neve, H., Hanks, S., Heath, M. & Smith, W. (2020). ‘Today’s shook me up a lot inside…it’s definitely changed me’: Emotional responses and transformative learning through working with disadvantaged communities. <em>Education for Primary Care</em>, <em>31</em>(6), 358-364. <a href = "https://doi.org/10.1080/14739879.2020.1819170" target= "_blank">https://doi.org/10.1080/14739879.2020.1819170</a></li>
-							<li>Leyland, R., Heath, M., Neve, H., & Maynard, V. (2020). Structured reflection on shared decision making. <em>The Clinical Teacher</em>, <em>17</em>, 1-7.<a href = "https://doi.org/10.1111/tct.13233" target= "_blank">https://doi.org/10.1111/tct.13233</a></li>
-							<li>Lloyd, H., & Heath, M. (2018). A spotlight on safeguarding in trainee selection: The Plymouth programme’s experience of Safer Recruitment. <em>Clinical Psychology Forum</em>, <em>306</em>, 25-29. <a href = "https://pearl.plymouth.ac.uk/handle/10026.1/12975" target= "_blank">https://pearl.plymouth.ac.uk/handle/10026.1/12975</a></li>
-						</ul>
-					</div>
-				</section>
-
-				<!-- Seven -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<ul class="actions stacked">
-								<li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=sAafLmkWiUWHiRCgaTTcYY3TRgANQcZOiW8-d-v0uCBUNFFJMDQ0VkFCSDA1OTQwVUxGMDRES1Q1TC4u" target= "_blank" class="button big wide smooth-scroll-middle">Contact Me!</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<p>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-						</div>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="https://kit.fontawesome.com/dfafc9ca38.js" crossorigin="anonymous"></script>
-
+		<div id="wrapper" class="divided">
+			<section class="banner style1 orient-left content-align-right image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+				<div class="content">
+					<h1>Miranda Heath</h1>
+					<p class="major">Hello! I'm Miranda, a Psychology PhD student at the <a href="https://www.ed.ac.uk/profile/miranda-heath" target= "_blank">University of Edinburgh</a>.
+					<p>My work seeks to disentangle the influence of individualism and neoliberal ideology from altruism and moral expansiveness research. I hope this will help us to better understand <em>collective</em> moral regard and behaviour and, in turn, better equip us to tackle existential collective action problems such as the climate emergency and pandemics.</p>
+					<p>In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.</p>
+					<p>Check out my <a href="about.html">about page</a> for a bit more about me, and my <a href="blog.html">blog page</a> for my thoughts and ideas.</p>
+					<p><a href = "https://orcid.org/0000-0003-0115-0978" target= "_blank"><i class="fa-brands fa-orcid" ></i></a>  <a href = "https://www.researchgate.net/profile/Miranda-Heath-3" target= "_blank"><i class="fa-brands fa-researchgate"></i></a> <a href = "https://github.com/MirandaHeath" target= "_blank"><i class="fa-brands fa-github"></i></a></p>
+					<ul class="actions stacked">
+						<li><a href="#first" class="button big wide smooth-scroll-middle">Tell me more!</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/banner.jpg" alt="an expressive painting of a melting ice landscape" />
+				</div>
+			</section>
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+				<div class="content">
+					<h2>Methodological Approach</h2>
+					<p>I am interested in post-positivist and critical realist methodologies that identify and subvert existing power structures and consider the role of history and social context in shaping the social world and our understanding of it, including PDT, FDA and the various approaches to CDA. My education spans psychology and philosophy, and I like to bring epistemological and ontological questions from the philosophy of science and mind to bear on my research.</p>
+				</div>
+				<div class="image">
+					<img src="images/spotlight01.jpg" alt="a photograph taken at a slanted angle of a stone circle with the grass in front cut into concentric rings" />
+				</div>
+			</section>
+			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<div class="content">
+					<h2>Lab</h2>
+					<p>I am part of the <a href="https://www.mattiwilks.com/lab" target= "_blank">Altruistic Minds Lab</a>, run by my supervisor, Dr. Matti Wilks. We meet bi-weekly to discuss topics in moral psychology, from the moral circle to the moral treatment of animals to morality and ethics in AI. We welcome external speakers where possible!</p>
+				</div>
+				<div class="image">
+					<img src="images/spotlight02.jpg" alt="a photograph of a black and white cat sat in the middle or a round rug with different bands of colour in concentric rings" />
+				</div>
+			</section>
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<div class="content">
+					<h2>Knowldge, Skills and Experience</h2>
+					<p>I am experienced in qualitative data collection (interviews, focus groups, free text survey questions, written and pictorial reflections) and analysis (particularly critical discourse studies, post-structuralist discourse theory, discursive psyschology and thematic analysis) within social psychology, health and education research. I have explored reflection and threshold concepts in medical and dental education, and how prospective donors and renal staff discuss non-directed kidney donation in the UK. I am trained to a post-graduate level in qualitative methods, univariate and multivariate statistics in R, Bayesian statistics in R and research skills and design.</p>
+				</div>
+				<div class="image">
+					<img src="images/spotlight03.jpg" alt="a photograph of a balanced stack of rocks next to a lake with concentric rings of ripples on the surface" />
+				</div>
+			</section>
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<div class="content">
+					<h2>Works</h2>
+					<ul class="alt">
+						<li>Heath, M., & Auburn, T. <em>‘I’m not exceptional’: How unspecified kidney donors construct their identity and altruism</em>. [Undergraduate dissertation].</li>
+						<li>Leyland, R., Heath, M., Collett, T., Drake, E., & Neve, H. 'How far I’ve come': The value of reviewing past reflections. <em>Reflective Practice</em>, 1–13. <a href = https://doi.org/10.1080/14623943.2024.2406969 target= "_blank">https://doi.org/10.1080/14623943.2024.2406969</a></li>
+						<li>Neve, H., Hanks, S., Heath, M. & Smith, W. (2020). ‘Today’s shook me up a lot inside…it’s definitely changed me’: Emotional responses and transformative learning through working with disadvantaged communities. <em>Education for Primary Care</em>, <em>31</em>(6), 358-364. <a href = "https://doi.org/10.1080/14739879.2020.1819170" target= "_blank">https://doi.org/10.1080/14739879.2020.1819170</a></li>
+						<li>Leyland, R., Heath, M., Neve, H., & Maynard, V. (2020). Structured reflection on shared decision making. <em>The Clinical Teacher</em>, <em>17</em>, 1-7.<a href = "https://doi.org/10.1111/tct.13233" target= "_blank">https://doi.org/10.1111/tct.13233</a></li>
+						<li>Lloyd, H., & Heath, M. (2018). A spotlight on safeguarding in trainee selection: The Plymouth programme’s experience of Safer Recruitment. <em>Clinical Psychology Forum</em>, <em>306</em>, 25-29. <a href = "https://pearl.plymouth.ac.uk/handle/10026.1/12975" target= "_blank">https://pearl.plymouth.ac.uk/handle/10026.1/12975</a></li>
+					</ul>
+				</div>
+			</section>
+			<section class="wrapper style1 align-center">
+				<div class="inner medium">
+					<ul class="actions stacked">
+						<li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=sAafLmkWiUWHiRCgaTTcYY3TRgANQcZOiW8-d-v0uCBUNFFJMDQ0VkFCSDA1OTQwVUxGMDRES1Q1TC4u" target= "_blank" class="button big wide smooth-scroll-middle">Contact Me!</a></li>
+					</ul>
+				</div>
+			</section>
+			<footer class="wrapper style1 align-center">
+				<div class="inner">
+					&copy; 2024 Miranda Heath
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
