index: add Ideology Research Group

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                     In the future, I am keen to explore applying my skills, knowledge and experience to policy work to make meaningful social change.
                 </p>
                 <p>
+                    I co-organise the
+                    <a href="https://ideology.group/" target="_blank">Ideology Research Group</a>
+                    at the University of Edinburgh, where members present both new work and existing literature on
+                    ideology broadly construed.
+                <p>
                     Check out my
                     <a href="/about">about page</a>
                     for a bit more about me, and my
